<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo Map Navigation</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_take_photo">Take a Photo</string>
    <string name="action_profile">My Profile</string>
    <string name="mobiledata_title">Mobile Data</string>
    <string name="mobiledata_message">You are currently connected to mobile data. Do you still want to continue?</string>
    <string name="no_connection_title">No Connection</string>
    <string name="no_connection_message">Currently you are not connected to any kind of network</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="look_up">Have a look!</string>
    <string name="email_empty_error">Email cannot be empty!</string>
    <string name="password_empty_error">Password cannot be empty!</string>
    <string name="default_username">Username</string>
    <string name="url_copied_clipboard">Uploaded images URL copied to your clipboard!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="remail_hint">Retype Email</string>
    <string name="repassword_hint">Retype Password</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_email_error">Invalid Email</string>
    <string name="emails_not_match_error">Emails do not match</string>
    <string name="password_not_match_error">Passwords do not match</string>
    <string name="cannot_find_location_error_message">Currently we cannot find your location. Try to open any kind of internet connection or try again later!</string>
    <string name="cannot_find_location_error_title">Unable to find location!</string>
    <string name="event_load_message">Loading your events…</string>
    <string name="sign_in_message">Signing in…</string>
    <string name="search_location_message">Searching your location…</string>
    <string name="title_activity_display_image">DisplayImageActivity</string>
    <string name="marker_not_exist_title">Event not found!</string>
    <string name="marker_not_exist_error">The clicked event does not exist anymore!</string>
    <string name="retrieve_data_message">Retrieving related data…</string>
    <string name="check_events">Checking your events…</string>
    <string name="new_event_load_message">New event loading…</string>

</resources>
