<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.erman.photomapnavigation.activities.SignUpActivity"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:layout_centerVertical="true">

    <EditText
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_action_person"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="8dp"
        android:hint="@string/email_hint"/>

    <EditText
        android:id="@+id/reemail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/email"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_action_person"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="8dp"
        android:hint="@string/remail_hint"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reemail"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_action_accounts"
        android:drawableLeft="@drawable/ic_action_accounts"
        android:drawablePadding="8dp"
        android:hint="@string/password_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:id="@+id/repassword"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_action_accounts"
        android:drawableLeft="@drawable/ic_action_accounts"
        android:drawablePadding="8dp"
        android:hint="@string/repassword_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repassword"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/done_button"
            android:drawableEnd="@drawable/ic_action_accept"
            android:drawableRight="@drawable/ic_action_accept"
            android:text="@string/done"
            android:drawablePadding="8dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:drawableEnd="@drawable/ic_action_cancel"
            android:drawableRight="@drawable/ic_action_cancel"
            android:text="@string/cancel"
            android:drawablePadding="8dp"
            android:layout_weight="1"/>

    </LinearLayout>
</RelativeLayout>