<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.erman.photomapnavigation.activities.SignIn"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center">

    <EditText
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_action_person"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="8dp"
        android:hint="@string/email_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_action_accounts"
        android:drawableLeft="@drawable/ic_action_accounts"
        android:drawablePadding="8dp"
        android:hint="@string/password_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_button"
        android:drawableEnd="@drawable/ic_action_accept"
        android:drawableRight="@drawable/ic_action_accept"
        android:text="@string/sign_in"/>

</LinearLayout>
